--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ footer .foot {
   padding: 1% 0;
 }
 
-footer .foot .contact h1 {
+footer .foot .contact h2 {
   -webkit-margin-after: 0.5em;
           margin-block-end: 0.5em;
 }
@@ -156,7 +156,7 @@ footer .foot .form h2 {
           margin-block-end: 0.5em;
 }
 
-footer .foot .form h2 form input {
+footer .foot .form form input {
   display: block;
   margin: 2px;
   background-color: transparent;
@@ -166,19 +166,19 @@ footer .foot .form h2 form input {
   padding: 5px;
 }
 
-footer .foot .form h2 form ::-webkit-input-placeholder {
+footer .foot .form form ::-webkit-input-placeholder {
   color: #ececec;
 }
 
-footer .foot .form h2 form :-ms-input-placeholder {
+footer .foot .form form :-ms-input-placeholder {
   color: #ececec;
 }
 
-footer .foot .form h2 form ::-ms-input-placeholder {
+footer .foot .form form ::-ms-input-placeholder {
   color: #ececec;
 }
 
-footer .foot .form h2 form ::placeholder {
+footer .foot .form form ::placeholder {
   color: #ececec;
 }
 
